--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -10,7 +10,12 @@
   }
 
   &--large{
-    font-size: 1.25rem;
-    padding: 1.1rem 1.9rem;
+    font-size: 1rem;
+    padding: 1rem 1.7rem;
+
+    @mixin atSmall{
+      font-size: 1.25rem;
+      padding: 1.1rem 1.9rem;
+    }
   }
 }
