Complete large hero block and intro content block.

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -7,3 +7,12 @@ img{
   max-width: 100%;
   height: auto;
 }
+
+*{
+  box-sizing: border-box;
+}
+
+a{
+  font-weight: 700;
+  color: $mainOrange;
+}
